cambios agregamos sitio de platzi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo!!</title>
   </head>
   <body>
-    <p>Hola estudiante este es mi sitio Web sigueme en twitter :v</p>
+    <p>Hola amigos & amigas este es mi sitio Web</p>
   </body>
 </html>
